--- a/musiccessories-unstyled.html
+++ b/musiccessories-unstyled.html
@@ -11,8 +11,8 @@
 <body>
   <div class="full body p-8 space-y-8">
 
-    <div class="navigation md:flex">
-      <!-- NAVIGATION -->
+    <!-- NAVIGATION -->
+    <div class="navigation flex">
       <h1 class="md:w-1/2">
         <a href="index.html">
           <span>Hi! Welcome to Musiccessories!</span>
@@ -24,8 +24,8 @@
       </p>
     </div>
 
-    <div class="products md:flex space-x-8">
-      <!-- PRODUCTS -->
+    <!-- PRODUCTS -->
+    <div class="products md:flex md:space-x-4">
       <div class="product-1 md:w-1/3">
         <div class="space-y-4">
           <h2>Guitar Strings</h2>
@@ -64,6 +64,7 @@
       </div>
     </div>
 
+    <!-- ORDER FORM -->
     <h1 class="form border-4 text-center">Ready to Order?</h1> <!-- FORM -->
     <!-- Order form goes here -->
   </div>
